# THYXEL

./: .env.example  .gitignore  Anchor.toml  README.md  hardhat.config.ts  package.json
contracts/: ThyxelToken.sol
docs/: LAUNCH_GUIDE.md  WHITEPAPER.md  index.html
programs/thyxel-hook/: Cargo.toml
programs/thyxel-hook/src/: lib.rs
scripts/: create-token.ts  deploy-solana.ts  deploy.ts
test/: ThyxelToken.test.ts
tests/: thyxel-hook.ts
