[package]
name = "thyxel-hook"
version = "0.1.0"
description = "THYXEL ($THYX) - Solana Transfer Hook with Behavioral DNA, Epoch Mutations & Dynamic Burns"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "thyxel_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-transfer-hook-interface = "0.6.3"
spl-tlv-account-resolution = "0.6.3"

[dev-dependencies]
anchor-client = "0.29.0"
